--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -789,5 +789,6 @@
 "kCheatMeNotSoEasy" = "Cheat Me? Not so easy";
 "kYouAreFooled" = "Ha ha, you are fooled";
 "kIWantToGoSeeUNextTime" = "I want to go, see you next time";
+"kFastEntry" = "QuickGame";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
