--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -801,6 +801,6 @@
 "kCheatMeNotSoEasy" = "想阴我，没那么容易";
 "kYouAreFooled" = "哈哈，你上当了";
 "kIWantToGoSeeUNextTime" = "我要走啦，下次再玩";
-
+"kFastEntry" = "快速加入";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
