--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -784,6 +784,7 @@
 "kCheatMeNotSoEasy" = "想陰我，沒那麽容易";
 "kYouAreFooled" = "哈哈，你上當了";
 "kIWantToGoSeeUNextTime" = "我要走啦，下次再玩";
+"kFastEntry" = "快速加入";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
 
