--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -67,8 +67,8 @@
 "kCancel" = "取消";
 "kQuitGameAlertMessage" = "確定要退出遊戲嗎?";
 "kQuitGameAlertTitle" = "退出遊戲";
-"kDedutCoinQuitGameAlertMessage" = "如果你退出遊戲，系統將會扣除1個金幣哦。";
-"kNoCoinQuitGameAlertMessage" = "逃跑需要扣除1個金幣，你的賬戶餘額不足，現在不能退出遊戲哦！";
+"kDedutCoinQuitGameAlertMessage" = "如果你退出遊戲，系統將會扣除%d個金幣哦。";
+"kNoCoinQuitGameAlertMessage" = "逃跑需要扣除金幣，你的賬戶餘額不足，現在不能退出遊戲哦！";
 
 
 "kContinue" = "繼續 [%d]";
