--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -765,7 +765,7 @@
 "kWaittingForNextTurn" = "等待下輪...";
 "kGameBegin" = "遊戲開始了...";
 "kNearBy" = "附近";
-"kWhoseRoom" = "%@ 的房間";
+"kWhoseRoom" = "%@的房間";
 
 "kSessionFull" = "房間已滿";
 
@@ -785,6 +785,7 @@
 "kYouAreFooled" = "哈哈，你上當了";
 "kIWantToGoSeeUNextTime" = "我要走啦，下次再玩";
 "kFastEntry" = "快速加入";
+"kDiceEnterPassword" = "房間密碼(可選)";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
 
