--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -803,5 +803,7 @@
 "kIWantToGoSeeUNextTime" = "我要走啦，下次再玩";
 "kFastEntry" = "快速加入";
 "kDiceEnterPassword" = "房间密码(可选)";
+
+"kWaitingForMoreUsers" = "等待更多用户...";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
