--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -786,6 +786,9 @@
 "kIWantToGoSeeUNextTime" = "我要走啦，下次再玩";
 "kFastEntry" = "快速加入";
 "kDiceEnterPassword" = "房間密碼(可選)";
+
+"kWaitingForMoreUsers" = "等待更多用戶...";
+
 /*********************** 大话骰子国际化字符串结束 *************************/
 
 
