update feedback for dice

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -791,5 +791,6 @@
 "kIWantToGoSeeUNextTime" = "I want to go, see you next time";
 "kFastEntry" = "QuickGame";
 "kDiceEnterPassword" = "room password(optional)";
+"kDiceFeedbackTips" = "Welcome to join QQ group:228119679,and follow the official Weibo @欢乐大话骰";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
