--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -803,5 +803,6 @@
 "kIWantToGoSeeUNextTime" = "我要走啦，下次再玩";
 "kFastEntry" = "快速加入";
 "kDiceEnterPassword" = "房间密码(可选)";
+"kDiceFeedbackTips" = "欢迎加入欢乐大话骰QQ群:228119679, 关注官方微博 @欢乐大话骰";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
