--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -786,6 +786,7 @@
 "kIWantToGoSeeUNextTime" = "我要走啦，下次再玩";
 "kFastEntry" = "快速加入";
 "kDiceEnterPassword" = "房間密碼(可選)";
+"kDiceFeedbackTips" = "歡迎加入歡樂大話骰QQ群:228119679,關注官方微博 @欢乐大话骰";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
 
