--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -809,6 +809,7 @@
 "kDiceRoom" = "欢乐大话骰%d号房";
 
 "kWaitingForMoreUsers" = "等待更多用户...";
-
+"kJoining" = "正在进入房间";
+"kCreatingRoom" = "正在创建房间";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
