--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -792,7 +792,8 @@
 "kDiceRoom" = "歡樂大話骰%d號房";
 
 "kWaitingForMoreUsers" = "等待更多用戶...";
-
+"kJoining" = "正在進入房間";
+"kCreatingRoom" = "正在創建房間";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
 
