update feedback for dice

--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -810,5 +810,8 @@
 
 "kWaitingForMoreUsers" = "等待更多用户...";
 
+"kDice_share_message_body" = "你还以为大话骰只能在夜店玩吗？隆重推荐一款手机版的大话骰——《%@》！不要再等待！不要再犹豫了！赶紧下载！\n%@";
+"kDice_email_subject" = "分享［欢乐大话骰］移动版游戏";
+
 /*********************** 大话骰子国际化字符串结束 *************************/
 
