--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -793,6 +793,9 @@
 
 "kWaitingForMoreUsers" = "等待更多用戶...";
 
+"kDice_share_message_body" = "你還以為大話骰只能在夜店玩嗎？隆重推荐一款手機版的大話骰——《%@》！不要再等待！不要再猶豫了！趕緊下載！\n%@";
+"kDice_email_subject" = "分享［歡樂大話骰］移動版遊戲";
+
 /*********************** 大话骰子国际化字符串结束 *************************/
 
 
