--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -66,6 +66,10 @@
 "kQuitGameAlertTitle" = "Quit Game";
 "kQuitGameAlertMessage" = "Are you sure to quit the game?";
 
+"kQuitDrawAlertMessage" = "Are you going to give the drawing?";
+"kQuitDrawAlertTitle" = "Give Up";
+
+
 "kDedutCoinQuitGameAlertMessage" = "If you quit the game, the system will deduct %d coin.";
 "kNoCoinQuitGameAlertMessage" = "You have no coins, cannot quit the game!";
 
