--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -806,7 +806,7 @@
 "kJoining" = "正在進入房間";
 "kCreatingRoom" = "正在創建房間";
 "kDiceShop" = "歡樂大話骰子商店";
-
+"kNotEnoughCoinToContinue" = "你的金幣太少，不能繼續遊戲了";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
 
