--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -824,7 +824,7 @@
 "kJoining" = "正在进入房间";
 "kCreatingRoom" = "正在创建房间";
 "kDiceShop" = "欢乐大话骰子商店";
-
+"kNotEnoughCoinToContinue" = "你的金币太少，不能继续游戏了";
 
 /*********************** 大话骰子国际化字符串结束 *************************/
 
