--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -787,6 +787,9 @@
 
 "kOpenDice" = "开";
 "kScrambleToOpenDice" = "抢开";
+"kOpenDiceMessage" = "开";
+"kScrambleToOpenDiceMessage" = "抢开";
+
 "kWaittingForNextTurn" = "等待下轮...";
 "kGameBegin" = "游戏开始了...";
 "kNearBy" = "附近";
@@ -825,6 +828,10 @@
 "kCreatingRoom" = "正在创建房间";
 "kDiceShop" = "欢乐大话骰子商店";
 
+"kDiceRoomListTitle" = "欢乐大话骰";
+"kDiceGameRules"= "游戏规则";
+"kDicePropDescription" = "道具说明";
+"kDiceWilds" = "斋";
 
 /*********************** 大话骰子国际化字符串结束 *************************/
 
