--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -767,6 +767,9 @@
 
 "kOpenDice" = "開";
 "kScrambleToOpenDice" = "搶開";
+"kOpenDiceMessage" = "開";
+"kScrambleToOpenDiceMessage" = "搶開";
+
 "kWaittingForNextTurn" = "等待下輪...";
 "kGameBegin" = "遊戲開始了...";
 "kNearBy" = "附近";
@@ -806,6 +809,12 @@
 "kJoining" = "正在進入房間";
 "kCreatingRoom" = "正在創建房間";
 "kDiceShop" = "歡樂大話骰子商店";
+
+
+"kDiceRoomListTitle" = "歡樂大話骰";
+"kDiceGameRules"= "遊戲規則";
+"kDicePropDescription" = "道具說明";
+"kDiceWilds" = "齋";
 
 /*********************** 大话骰子国际化字符串结束 *************************/
 
