--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -808,7 +808,7 @@
 "kWaitingForMoreUsers" = "Watting for more player...";
 
 "kDice_share_message_body" = "I found a very funny game recently. Its name is '%@'.\nHere is the AppStore download URL:\n%@";
-"kDice_email_subject" = "Share a funny iOS game - Happy lying dice";
+"kDice_email_subject" = "Share a funny iOS game - Liar Dice";
 
 "kJoining" = "Entering the room";
 "kCreatingRoom" = "Creating the room";
