--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -821,5 +821,12 @@
 "kDicePropDescription" = "Prop";
 "kDiceWilds" = "W";
 
+
+"kDiceMenuStart" = "Start"; 
+"kDiceMenuHelp" = "Help"; 
+"kDiceMenuRoom" = "Room"; 
+"kDiceMenuShop" = "Shop"; 
+
+
 /*********************** 大话骰子国际化字符串结束 *************************/
 
