--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -813,7 +813,7 @@
 "kJoining" = "Entering the room";
 "kCreatingRoom" = "Creating the room";
 
-"kDiceShop" = "Dice Shop";
+"kDiceShop" = "Liar Dice Shop";
 "kNotEnoughCoinToContinue" = "You have no enough coin to continue game";
 
 "kDiceRoomListTitle" = "Liar Dice";
