--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -808,7 +808,7 @@
 
 "kJoining" = "正在進入房間";
 "kCreatingRoom" = "正在創建房間";
-"kDiceShop" = "歡樂大話骰子商店";
+"kDiceShop" = "歡樂大話骰商店";
 
 "kDiceRoomListTitle" = "歡樂大話骰";
 "kDiceGameRules"= "遊戲規則";
