--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -826,7 +826,7 @@
 
 "kJoining" = "正在进入房间";
 "kCreatingRoom" = "正在创建房间";
-"kDiceShop" = "欢乐大话骰子商店";
+"kDiceShop" = "欢乐大话骰商店";
 
 "kDiceRoomListTitle" = "欢乐大话骰";
 "kDiceGameRules"= "游戏规则";
