--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -823,6 +823,8 @@
 "kDiceMenuRoom" = "遊戲大廳";
 "kDiceMenuShop" = "道具商店";
 
+"kCoinsNotEnoughAndEnterShop" = "你當前的金幣少於%d，玩不了一局遊戲了，現在就買些金幣？";
+
 /*********************** 大话骰子国际化字符串结束 *************************/
 
 
