fix bug of quit game

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -823,7 +823,7 @@
 
 
 "kDiceMenuStart" = "Start"; 
-"kDiceMenuHelp" = "Game Help"; 
+"kDiceMenuHelp" = "Help"; 
 "kDiceMenuRoom" = "Room"; 
 "kDiceMenuShop" = "Shop"; 
 
