--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -842,5 +842,7 @@
 
 "kCoinsNotEnoughAndEnterShop" = "你当前的金币少于%d，玩不了一局游戏了，现在就买些金币？";
 
+"kToolCut" = "劈";
+"kToolRollAgain" = "摇";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
