--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -828,6 +828,7 @@
 "kDiceMenuShop" = "Shop"; 
 
 "kCoinsNotEnoughAndEnterShop" = "Your coins are not enough. Want to buy some now?";
-
+"kToolCut" = "R";
+"kToolRollAgain" = "C";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
