--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -792,12 +792,12 @@
 
 "kNoMatterWhatYouCallIWillOpen" = "I will challenge you in any case.";
 "kDoYouDareToOpen" = "Bite me";
-"kBelieveItOrNotAnywayIBelieved" = "Believe it or not, I believed";
+"kBelieveItOrNotAnywayIBelieved" = "I believe it, whether you believe it or not.";
 "kAttentionWilds" = "Attention for wilds";
 "kDontGoAndPlayMore" = "Don't go, play for a while";
-"kCheatMeNotSoEasy" = "Cheat Me? Not so easy";
+"kCheatMeNotSoEasy" = "Trick Me? Not so easy";
 "kYouAreFooled" = "Ha ha, you are fooled";
-"kIWantToGoSeeUNextTime" = "I want to go, see you next time";
+"kIWantToGoSeeUNextTime" = "I gonna go, see you next time";
 "kFastEntry" = "Quick Start";
 "kDiceEnterPassword" = "room password(optional)";
 
@@ -814,7 +814,7 @@
 "kCreatingRoom" = "Creating the room";
 
 "kDiceShop" = "Liar Dice Shop";
-"kNotEnoughCoinToContinue" = "You have no enough coin to continue game";
+"kNotEnoughCoinToContinue" = "You have not enough coin to continue.";
 
 "kDiceRoomListTitle" = "Liar Dice";
 "kDiceGameRules"= "Game Rules";
@@ -827,7 +827,7 @@
 "kDiceMenuRoom" = "Room"; 
 "kDiceMenuShop" = "Shop"; 
 
-"kCoinsNotEnoughAndEnterShop" = "Your coins are not enough. Want to buy some now?";
+"kCoinsNotEnoughAndEnterShop" = "Your coins are not enough. Buy some now?";
 "kToolCut" = "R";
 "kToolRollAgain" = "C";
 
