--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -778,10 +778,12 @@
 "kSessionFull" = "房間已滿";
 
 
+"kItemRollAgain" = "重搖道具";
+"kItemCut" = "劈道具";
 "kRollAgain" = "搖";
 "kCut" = "劈";
-"kRollAgainDescription" = "使用該道具可以重搖一次骰子。";
-"kCutDescription" = "使用該道具則立刻開骰，並且賭註加倍。";
+"kRollAgainDescription" = "使用【重搖】道具可以重搖一次骰子。";
+"kCutDescription" = "使用【劈】道具則立刻開骰，並且賭註翻倍。";
 
 "kMoreRoom" = "更多...";
 "kMoreRoomLoading" = "加載中...";
