--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -781,8 +781,8 @@
 
 "kSessionFull" = "Room is full";
 
-"kItemRollAgain" = "reroll item";
-"kItemCut" = "cut item";
+"kItemRollAgain" = "Reroll";
+"kItemCut" = "Cut";
 "kRollAgain" = "reroll";
 "kRollAgainDescription" = "Use 【Reroll】 item to roll dice again and change your dices. Good luck!";
 "kCut" = "cut";
@@ -802,11 +802,12 @@
 "kFastEntry" = "Quick Start";
 "kDiceEnterPassword" = "room password(optional)";
 
-"kDiceFeedbackTips" = "Welcome to join QQ group:228119679,and follow the official Weibo @欢乐大话骰";
+//"kDiceFeedbackTips" = "Welcome to join QQ group:228119679,and follow the official SINA Weibo @欢乐大话骰";
+"kDiceFeedbackTips" = "Don't hesitate to send your feedback to us. Just do it right now!";
 
 "kDiceRoom" = "Liar Dice Room %d";
 
-"kWaitingForMoreUsers" = "Waiting for more player...";
+"kWaitingForMoreUsers" = "Waiting for more players...";
 
 "kDice_share_message_body" = "I found a very funny game recently. Its name is '%@'.\nHere is the AppStore download URL:\n%@";
 "kDice_email_subject" = "Share a funny iOS game - Liar Dice";
