--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -848,6 +848,6 @@
 "kToolRollAgain" = "摇";
 
 "kRefreshingRoomList" = "刷新房间列表...";
-
+"kDailyAwardCoin" = "恭喜你捡到了%d个金币";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
