--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -830,7 +830,7 @@
 "kToolRollAgain" = "搖";
 
 "kRefreshingRoomList" = "刷新房間列表...";
-
+"kDailyAwardCoin" = "恭喜您見到了%d個金幣";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
 
