update show feed controller.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -581,7 +581,7 @@
 "kCorrect" = "Correct!";
 "kSending" = "Sending...";
 "kNoCommentTips" = "No Comments";
-"kFeedDetail" = "%@'s Drawing";
+"kFeedDetail" = "Drawing Detail";
 
 "kCommentFail" = "Failed to Comment";
 
