--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -850,5 +850,7 @@
 
 "kRefreshingRoomList" = "刷新房间列表...";
 "kDailyAwardCoin" = "恭喜你捡到了%d个金币";
+"kDiceUpgradeMsg" = "恭喜！您刚刚升到第%d级, 【劈】+%d";
+"kDiceDegradeMsg" = "噢，你玩得太不认真了，都降到%d级了";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
