--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -852,5 +852,6 @@
 "kDailyAwardCoin" = "恭喜你捡到了%d个金币";
 "kDiceUpgradeMsg" = "恭喜！您刚刚升到第%d级, 【劈】+%d";
 "kDiceDegradeMsg" = "噢，你玩得太不认真了，都降到%d级了";
+"kClickMe" = "点我一下";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
