--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -834,6 +834,7 @@
 "kDailyAwardCoin" = "恭喜您見到了%d個金幣";
 "kDiceUpgradeMsg" = "恭喜！您剛剛升到第 %d級，【劈】＋%d";
 "kDiceDegradeMsg" = "噢，你玩得太不認真了，都降到%d級了";
+"kClickMe" = "點我一下";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
 
