--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -820,7 +820,7 @@
 
 "kDiceRoomListTitle" = "Liar Dice";
 "kDiceGameRules"= "Game Rules";
-"kDicePropDescription" = "Prop";
+"kDicePropDescription" = "Props";
 "kDiceWilds" = " W ";
 
 "kDiceMenuStart" = "START"; 
