--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -775,7 +775,7 @@
 "kScrambleToOpenDiceMessage" = "Challenge";
 
 "kWaittingForNextTurn" = "Waiting...";
-"kGameBegin" = "Game start...";
+"kGameBegin" = "Game starts...";
 "kNearBy" = "NearBy";
 "kWhoseRoom" = "%@'s room";
 
@@ -807,7 +807,7 @@
 
 "kDiceRoom" = "Liar Dice Room %d";
 
-"kWaitingForMoreUsers" = "Waiting for more players...";
+"kWaitingForMoreUsers" = "Waiting...";
 
 "kDice_share_message_body" = "I found a very funny game recently. Its name is '%@'.\nHere is the AppStore download URL:\n%@";
 "kDice_email_subject" = "Share a funny iOS game - Liar Dice";
