--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -756,7 +756,7 @@
 
 "kCommitOpusTitle"  = "Submit drawing";
 "kCommitOpusMessage"  = "Are you sure to submit the drawing?";
-
+"kCustomMusic" = "Custom Music";
 
 
 /*********************** 猜猜画画国际化字符串结束 *************************/
