--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -773,7 +773,7 @@
 "kCommitOpusMessage" = "你确定要提交作品吗？";
 
 "kLatestFeed" = "最新";
-
+"kCustomMusic" = "自定义音乐";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
