--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -751,7 +751,7 @@
 "kCommitOpusMessage" = "你確定要提交作品嗎？";
 "kGuessDetailStat" = "猜過:%d | 猜對:%d | 鮮花:%d | 番茄:%d";
 "kLatestFeed" = "最新";
-
+"kCustomMusic" = "自定義音樂";
 
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
