update comment header view.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -759,6 +759,12 @@
 "kCustomMusic" = "Custom Music";
 
 
+"kCommentTimes" = "Comment(%d)";
+"kGuessTimes" = "Guess(%d)";
+"kFlowerTimes" = "Flower(%d)";
+"kTomatoTimes" = "Tomato(%d)";
+
+
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
