--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -774,6 +774,12 @@
 
 "kLatestFeed" = "最新";
 "kCustomMusic" = "自定义音乐";
+
+"kCommentTimes" = "评论(%d)";
+"kGuessTimes" = "猜画(%d)";
+"kFlowerTimes" = "鲜花(%d)";
+"kTomatoTimes" = "番茄(%d)";
+
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
