--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -780,6 +780,12 @@
 "kFlowerTimes" = "鲜花(%d)";
 "kTomatoTimes" = "番茄(%d)";
 
+"kNoComments" = "咦！还没人评论，赶紧抢沙发！";
+"kNoGuesses" = "咦！还没人猜，赶紧抢沙发！";
+"kNoFlowers" = "画得很好？送TA一朵花吧。";
+"kNoTomatos" = "画得很烂？请尽情扔番茄。";
+
+
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
