--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -759,6 +759,11 @@
 "kFlowerTimes" = "鮮花(%d)";
 "kTomatoTimes" = "番茄(%d)";
 
+"kNoComments" = "咦！還沒人評論，趕緊搶沙發！";
+"kNoGuesses" = "咦！還沒人猜，趕緊搶沙發！";
+"kNoFlowers" = "畫得很好？送TA一朵花吧。";
+"kNoTomatos" = "畫得很爛？請盡情扔番茄。";
+
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
