--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -79,6 +79,7 @@
 "kContinue" = "继续 [%d]";
 "kExit" = "不玩了";
 "kSave" = "保存";
+"kSaving" = "保存中...";
 "kTurnResult" = "本轮结果";
 "kBuyColor" = "购买颜色";
 "kConnectionRecover" = "连接恢复";
