--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -78,6 +78,7 @@
 "kContinue" = "繼續 [%d]";
 "kExit" = "退出遊戲";
 "kSave" = "保存";
+"kSaving" = "保存中...";
 "kTurnResult" = "本輪結果";
 "kBuyColor" = "購買顏色";
 "kConnectionRecover" = "連接恢復";
