update pick color view.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -770,6 +770,9 @@
 "kNoFlowers" = "Send a flower, if you like it.";
 "kNoTomatos" = "Throw a tomato, if you hate it.";
 
+"kPickPenColor" = "Pen Color Selection";
+"kPickBGColor" = "Background Color Selection";
+
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
