--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -786,6 +786,8 @@
 "kNoFlowers" = "画得很好？送TA一朵花吧。";
 "kNoTomatos" = "画得很烂？请尽情扔番茄。";
 
+"kPickPenColor" = "选择画笔颜色";
+"kPickBGColor" = "选择背景颜色";
 
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
