--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -765,6 +765,9 @@
 "kNoFlowers" = "畫得很好？送TA一朵花吧。";
 "kNoTomatos" = "畫得很爛？請盡情扔番茄。";
 
+"kPickPenColor" = "選擇畫筆顏色";
+"kPickBGColor" = "選擇背景顏色";
+
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
