--- a/Draw/zh-Hant.lproj/InfoPlist.strings
+++ b/Draw/zh-Hant.lproj/InfoPlist.strings
@@ -1,5 +1,5 @@
 /* Localized versions of Info.plist keys */
 
-//"CFBundleDisplayName" = "猜猜畫畫";
+"CFBundleDisplayName" = "猜猜畫畫";
 
-"CFBundleDisplayName"="歡樂大話骰";
+//"CFBundleDisplayName"="歡樂大話骰";
