--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -863,5 +863,9 @@
 "kDiceUpgradeMsg" = "Congratulations!You upgraded to level %d, [cut] +%d";
 "kDiceDegradeMsg" = "You play terribly, now degrade to level %d";
 "kClickMe" = "Click me!";
+
+"kDiceSnake" = "Snake";
+"kDiceNet" = "Net";
+"kDiceWai" = "Wai";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
