--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -878,5 +878,10 @@
 "kDiceUpgradeMsg" = "恭喜！您刚刚升到第%d级, 【劈】+%d";
 "kDiceDegradeMsg" = "噢，你玩得太不认真了，都降到%d级了";
 "kClickMe" = "点我一下";
+
+"kDiceSnake" = "蛇骰";
+"kDiceNet" = "净骰";
+"kDiceWai" = "围骰";
+
 /*********************** 大话骰子国际化字符串结束 *************************/
 
