update main page.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -867,5 +867,12 @@
 "kDiceSnake" = "Snake";
 "kDiceNet" = "Net";
 "kDiceWai" = "Wai";
+
+
+"kDiceMenuHappyRoom" = "Happy Room";
+"kDiceMenuHighRoom" = "High Room";
+"kDiceMenuSuperHighRoom" = "Super High Room";
+
+
 /*********************** 大话骰子国际化字符串结束 *************************/
 
