--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -830,6 +830,7 @@
 
 "kDiceRoom" = "Liar Dice Room %d";
 
+
 "kWaitingForMoreUsers" = "Waiting...";
 
 "kDice_share_message_body" = "I found a very funny game recently. Its name is '%@'.\nHere is the AppStore download URL:\n%@";
@@ -873,6 +874,9 @@
 "kDiceMenuHighRoom" = "High Room";
 "kDiceMenuSuperHighRoom" = "Super High Room";
 
+"kDiceHappyRoom" = "Happy Room %d";
+"kDiceHighRoom" = "High Room %d";
+"kDiceSuperHighRoom" = "Super High %d";
 
 /*********************** 大话骰子国际化字符串结束 *************************/
 
