--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -870,6 +870,10 @@
 "kDiceMenuHighRoom" = "勁爆場";
 "kDiceMenuSuperHighRoom" = "超爆場";
 
+"kDiceHappyRoom" = "歡樂場%d號房";
+"kDiceHighRoom" = "勁爆場%d號房";
+"kDiceSuperHighRoom" = "超爆場%d號房";
+
 /*********************** 大话骰子国际化字符串结束 *************************/
 
 
