--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -795,6 +795,10 @@
 "kPickPenColor" = "选择画笔颜色";
 "kPickBGColor" = "选择背景颜色";
 
+"kOpusCount" = "作品(%d)";
+"kJoinCount" = "参加(%d)";
+
+
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
