--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -776,6 +776,10 @@
 "kPickPenColor" = "選擇畫筆顏色";
 "kPickBGColor" = "選擇背景顏色";
 
+
+"kOpusCount" = "作品(%d)";
+"kJoinCount" = "參加(%d)";
+
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
